# digit-inference-app

./: .python-version  README.md  index.html  main.py  pyproject.toml
static/: main.js
